--- a/Notes .HTML
+++ b/Notes .HTML
@@ -1,8 +1,25 @@
-An HTML file always begins with <!DOCTYPE html& so that a browser knows what markup language it is reading.
-Anything between the opening <html& and closing </html& tags will be interpreted as HTML code. 
-<> is an opening tag that must always come first and </& is a closing tag that must alwasy come last.
-Titles will not appear in the document, but will appear in the tab bar.
-Putting anything between <body and </body& will insert it into ur document. 
-You should use <p& and </p& whenever you are writing something in the body.
-<br& and <br /& will separate two lines of writing that you put between it.
-There is a whole hierarchy to HTML to help organize the code you are writing in it. 
+<!DOCTYPE html>
+
+<head>
+	<title>HTML Notes</title>
+</head>
+
+<body>
+<p>An HTML file always begins with &lt;!DOCTYPE html> so that a browser knows what markup language it is reading.</p>
+
+<p>Anything between the opening &lt;html>and closing &lt;/html> tags will be interpreted as HTML code.</p>
+
+<p><> is an opening tag that must always come first and &lt;/> is a closing tag that must alwasy come last.</p>
+
+<p>Titles will not appear in the document, but will appear in the tab bar.</p>
+
+<p>Putting anything between &lt;body> and &lt;/body> will insert it into ur document.</p>
+
+<p>You should use &lt;p> and &lt;/p> whenever you are writing something in the body.</p>
+
+<p>&lt;br> brand &lt;br /> will separate two lines of writing that you put between it.</p>
+
+<p>There is a whole hierarchy to HTML to help organize the code you are writing in it.</p>
+
+<p>Comments can be written in HTML using the code &lt;!-- to open it and -->.</p>
+</body>
