--- a/HTML and CSS practice notes.html
+++ b/HTML and CSS practice notes.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html> <!-- This is how to create an HTML document. -->
+
 <html> <!-- This is needed to start an HTML document. -->
+	
 	<head>
+		
 		<title>HTML Notes</title>
+	
 	</head>
-	<body>
+	
+	<body>  <!-- This is the start of my html notes-->
+		
+		<h1>HTML Notes</h1>
+		
 		<p>An HTML file always begins with &lt;!DOCTYPE html> so that a browser knows what markup language it is reading.</p>
 
 		<p>Anything between the opening &lt;html>and closing &lt;/html> tags will be interpreted as HTML code.</p>
@@ -73,9 +81,31 @@
 		
 		<p>Data can span rows using rowspan and an integer greater than or equal to 1. rowspan="Number".</p>
 		
-		<p></p>
+		<p>Long tables can be sectioned off using &lt;tbody>.</p>
 		
-		<p></p>
+		<p>Table heads can be sectined off using &lt;thead>.</p>
+		
+		<p>The bottom part of a long table can be sectioned off using &lt;tfoot.</p>
+		
+		<p>CSS can be used to style tables by adding borders, colours and other elements.</p>
+		
+		<!--This is the end for my HTML notes.-->
+		
+		<head>
+			
+			<h2>CSS Notes</h2>
+		
+		</head>
+		
+		<p>CSS stands for Cascading Style sheets.</p>
+		
+		<p>To style an HTML element you must open it with &lt;style "and then add what you want to change and to what and then close it">.</p>
+		
+		<p>To change colour and font size of text you use &lt;p style="colour: red; font size: 20px;"> Then the text you want to change.</p>
+		
+		<p>To change font &lt;p style="font-family: Font Name">.</p>
+		
+		<p>HTML allows you to write CSS code in a dedicated section </p>
 		
 		<p></p>
 		
