--- a/HTML and CSS practice notes.html
+++ b/HTML and CSS practice notes.html
@@ -105,7 +105,32 @@
 		
 		<p>To change font &lt;p style="font-family: Font Name">.</p>
 		
-		<p>HTML allows you to write CSS code in a dedicated section </p>
+		<p>HTML allows you to write CSS code in a dedicated section of the page. 
+		It is opened by using &lt;head> &lt;style> "then what you want to change" { what changes you want to make }.</p>
+		
+		<p>Most developers avoid mixing code by making separate files for HTML only code and CSS only code.</p>
+		
+		<p>To link the CSS file to the HTML one you use &lt;link href="File Name.css" type="text/css" rel="stylesheet">.</p>
+		
+		<p>To change all text in a certain place you only need to put the HTML element you want to change {what you want to change about it}.</p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
 		
 		<p></p>
 		
