--- a/HTML and CSS practice notes.html
+++ b/HTML and CSS practice notes.html
@@ -114,9 +114,9 @@
 		
 		<p>To change all text in a certain place you only need to put the HTML element you want to change {what you want to change about it}.</p>
 		
-		<p></p>
+		<p>The class element is used to change certain elements of a page. We can add multiple classes by just adding different elements.</p>
 		
-		<p></p>
+		<p>An ID attribute can be added to an element to by using the name of the element then adding a #.</p>
 		
 		<p></p>
 		
