--- a/HTML and CSS practice notes.html
+++ b/HTML and CSS practice notes.html
@@ -118,6 +118,48 @@
 		
 		<p>An ID attribute can be added to an element to by using the name of the element then adding a #.</p>
 		
+		<p>Classes can be added to attributes so you can change everything with the same class easily.</p>
+		
+		<p>There is a certain order to which elements get styled by what so you must be careful. Ex: class precedes headings.</p>
+		
+		<p>Chaining selectors is necessary for some HTML elements and is done by creating multiple selectors.</p>
+		
+		<p>Nested elements are used to style HTML elements inside other HTML elements.</p>
+		
+		<p>Something even more specific than IDs are !important and they will override anything else.</p>
+		
+		<p>It is possible to add CSS styles to CSS selectors which prevents repetitive code.</p>
+		
+		<p>To style an HTML element using CSS, you need to write a CSS declaration inside of the body of a CSS selector.</p>
+		
+		<p>The font refers to the font-family and that is what you need to use to change the font on a webpage.</p>
+		
+		<p>You can also change the font's size using font-size.</p>
+		
+		<p>Font-weight controls if the text is bold or not.</p>
+		
+		<p>You can align the text to the right, left or center using text-align.</p>
+		
+		<p>Changing the color can change the color of the foreground or the background (Foreground is text color).</p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
 		<p></p>
 		
 		<p></p>
