--- a/HTML and CSS practice notes.html
+++ b/HTML and CSS practice notes.html
@@ -142,25 +142,25 @@
 		
 		<p>Changing the color can change the color of the foreground or the background (Foreground is text color).</p>
 		
-		<p></p>
+		<p>The opacity of text can also be changed by percentage using opacity.</p>
 		
-		<p></p>
+		<p>A background image can be put in your webpage using background-image and then putting the url.</p>
 		
-		<p></p>
+		<p>The Box Model is how HTML positions things automatically on a webpage. Using HTML and CSS we have unknowingly learnt about aspects of the Box Model.</p>
 		
-		<p></p>
+		<p>The 4 things that can be remodeled are the dimensions, the borders, the paddings and the margins of an element's box.</p>
 		
-		<p></p>
+		<p>The six properties that are changeable are the height, width, padding, border, margin and overflow.</p>
 		
-		<p></p>
+		<p>Click <img href"https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/diagram-boxmodel.svg"> to see each property's use.</p>
 		
-		<p></p>
+		<p>The height and width can be changed using height: # of px; and width: # of px.</p>
 		
-		<p></p>
+		<p>The borders can be affected by width, style and color.</p>
 		
-		<p></p>
+		<p>The border radius modifies the corners of the box the element is inby using border-radius.</p>
 		
-		<p></p>
+		<p>The padding of the box can be affected using padding-top, left, right, and bottom.</p>
 		
 		<p></p>
 		
