--- a/HTML and CSS practice notes.html
+++ b/HTML and CSS practice notes.html
@@ -162,23 +162,25 @@
 		
 		<p>The padding of the box can be affected using padding-top, left, right, and bottom.</p>
 		
-		<p></p>
+		<p>Using the function margin: ?px; will affect all four sides of the box. But, each specific side can be modified using margin-left,
+		margin-right, margin-top and margin-bottom.</p>
 		
-		<p></p>
+		<p>There is also a margin shortcut that is the same as the padding shortcut, where each margin can be changed in one large function.</p>
 		
-		<p></p>
+		<p>Using margin: ?px auto; will set the top and bottom margins to something and then center the element.</p>
 		
-		<p></p>
+		<p>Putting a number after an element that you want to change the margin and their sum will be the space in between.</p>
 		
-		<p></p>
+		<p>You can set a minimum and a maximum of how large the width of a box will be using min-width and max-width.</p>
 		
-		<p></p>
+		<p>The overflow function controls what exceeds the borders of a box. There are three changes which is to hide it, to put a 
+		scroll wheel or the default thing is to show it beneath the box.</p>
 		
-		<p></p>
+		<p>To change something back to a default stylesheet you have to set everything to 0.</p>
 		
-		<p></p>
+		<p>Something can be hidden or made visible by using visibility: hidden/visible;.</p>
 		
-		<p></p>
+		<p>There are problems with how we learned the box model because the padding and margin affected the </p>
 		
 		<p></p>
 		
