--- a/HTML and CSS practice notes.html
+++ b/HTML and CSS practice notes.html
@@ -182,9 +182,50 @@
 		
 		<p>There are problems with how we learned the box model because the padding and margin affected the </p>
 		
+		<p>The border-box model is unaffected by border thickness or padding.</p>
+		
+		<p>The five properties for adjusting the position of HTML elements in a browser are position, display, z-index, float and clear.</p>
+		
+		<p>The position property can be changed in four values, static, relative, absolute and fixed.</p>
+		
+		<p>Static is the default position that it will take.</p>
+		
+		<p>Relative is how far it will move, top moves down, bottom moves up, right moves left and left moves right.</p>
+		
 		<p></p>
 		
 		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
+		<p></p>
+		
 		
 		</body>
 
