--- a/Schedule.html
+++ b/Schedule.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<link href="Schedule.css" type="text.css" rel="stylesheet">
+	<link href="Schedule.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="Schedule.js"> </script>
 	<title>School Schedule</title>
-	<table border="2">
-	
+	<h1>School Schedule</h1>
+	<table border="9">
+		<!-- 8:20-9:20 9:25-10:25 10:40-11:40 11:40-12:30 12:30-1:00 1:05-2:05 2:10-3:05 !-->
 		<tr>
-			<th>Day and Time</th>
+			<th>Day and Period</th>
 			<th>Day 1</th>
 			<th>Day 2</th>
 			<th>Day 3</th>
@@ -20,101 +21,106 @@
 			<th>A6</th>
 		</tr>
 		<tr>
-			<th>8:20-9:20</th>
-			<td>Gym Mr.Jacked</td>
-			<td>Science Mr.Nye</td>
-			<td>Religion Mr.Jesus</td>
-			<td>Gym Mr.Jacked</td>
-			<td>History Mr.Columbus</td>
-			<td>Comp Prog Mr.Lua</td>
-			<td>History Mr.Columbus</td>
-			<td>Math Mr.Einstein</td>
+			<th>Period 1</th>
+			<td class="gym">Gym Mr.Jacked</td>
+			<td class="sci">Science Mr.Nye</td>
+			<td class="rel">Religion Mr.Jesus</td>
+			<td class="gym">Gym Mr.Jacked</td>
+			<td class="his">History Mr.Columbus</td>
+			<td class="cp">Comp Prog Mr.Lua</td>
+			<td class="his">History Mr.Columbus</td>
+			<td class="math">Math Mr.Einstein</td>
 			<td></td>
-			<td>French Ms.Baguette</td>
-			<td>Science Mr.Nye</td>
+			<td class="fre">French Ms.Baguette</td>
+			<td class="sci">Science Mr.Nye</td>
 		</tr>
 		<tr>
-			<th>9:25-10:25</th>
-			<td>Science Mr.Nye</td>
-			<td>Theatre Ms.Kahoot</td>
-			<td>Math Mr.Einstein</td>
-			<td>Comp Prog Mr.Lua</td>
-			<td>Theatre Ms.Kahoot</td>	
-			<td>Math Mr.Einstein</td>
-			<td>English Ms.Macbeth</td>
-			<td>French Ms.Baguette</td>
-			<td>Comp Prog Mr.Lua</td>
-			<td>Comp Prog Mr.Lua</td>
-			<td>Comp Prog Mr.Lua</td>
+			<th>Period 2</th>
+			<td class="sci">Science Mr.Nye</td>
+			<td class="the">Theatre Ms.Kahoot</td>
+			<td class="math">Math Mr.Einstein</td>
+			<td class="cp">Comp Prog Mr.Lua</td>
+			<td class="the">Theatre Ms.Kahoot</td>	
+			<td class="math">Math Mr.Einstein</td>
+			<td class="eng">English Ms.Macbeth</td>
+			<td class="fre">French Ms.Baguette</td>
+			<td class="cp">Comp Prog Mr.Lua</td>
+			<td class="cp">Comp Prog Mr.Lua</td>
+			<td class="cp">Comp Prog Mr.Lua</td>
 		</tr>
 		<tr>
-			<th>10:40-11:40</th>
-			<td>English Ms.Macbeth</td>
-			<td>French Ms.Baguette</td>
-			<td>French Ms.Baguette</td>
-			<td>Science Mr.Nye</td>
-			<td>Religion Mr.Jesus</td>
-			<td>English Ms.Macbeth</td>
-			<td>Religion Mr.Jesus</td>
-			<td>Science Mr.Nye</td>
-			<td>French Ms.Baguette</td>
+			<th>Period 3</th>
+			<td class="eng">English Ms.Macbeth</td>
+			<td class="fre">French Ms.Baguette</td>
+			<td class="fre">French Ms.Baguette</td>
+			<td class="sci">Science Mr.Nye</td>
+			<td class="rel">Religion Mr.Jesus</td>
+			<td class="eng">English Ms.Macbeth</td>
+			<td class="rel">Religion Mr.Jesus</td>
+			<td class="sci">Science Mr.Nye</td>
+			<td class="fre">French Ms.Baguette</td>
 			<td></td>
-			<td>French Ms.Baguette</td>
+			<td class="fre">French Ms.Baguette</td>
 		</tr>
 		<tr>
-			<th>11:40-12:30</th>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
-			<td>Lunch</td>
+			<th>Lunch</th>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
+			<td class="lunch">Munch</td>
 		</tr>
 		<tr>
-			<th>12:30-1:00</th>
-			<td>Comp Prog Mr.Lua</td>
-			<td>Speech Mr.Speaker</td>
-			<td>Homeroom Ms.Baguette</td>
-			<td>History Mr.Columbus</td>
-			<td>Speech Mr.Speaker</td>
-			<td>Theatre Ms.Kahoot</td>
-			<td>Assembly Mr.Baldy</td>
-			<td>History Mr.Columbus</td>
-			<td>Advisors Mr.Souvlaki</td>
-			<td>Advisors Mr.Souvlaki</td>
-			<td>Advisors Mr.Souvlaki</td>
+			<th>Period 4</th>
+			<td class="cp">Comp Prog Mr.Lua</td>
+			<td class="sp">Speech Mr.Speaker</td>
+			<td class="hr">Homeroom Ms.Baguette</td>
+			<td class="his">History Mr.Columbus</td>
+			<td class="sp">Speech Mr.Speaker</td>
+			<td class="the">Theatre Ms.Kahoot</td>
+			<td class="ass">Assembly Mr.Gentlemen</td>
+			<td class="his">History Mr.Columbus</td>
+			<td class="adv">Advisors Mr.Souvlaki</td>
+			<td class="adv">Advisors Mr.Souvlaki</td>
+			<td class="adv">Advisors Mr.Souvlaki</td>
 		</tr>
 		<tr>
-			<th>1:05-2:05</th>
-			<td>Comp Prog Mr.Lua</td>
-			<td>History Mr.Columbus</td>
-			<td>Science Mr.Nye</td>
-			<td>Math Mr.Einstein</td>
-			<td>Math Mr.Einstein</td>
-			<td>Theatre Ms.Kahoot</td>
-			<td>French Ms.Baguette</td>
-			<td>English Ms.Macbeth</td>
-			<td>Science Mr.Nye</td>
-			<td>Science Mr.Nye</td>
-			<td>Science Mr.Nye</td>
+			<th>Period 5</th>
+			<td class="cp">Comp Prog Mr.Lua</td>
+			<td class="his">History Mr.Columbus</td>
+			<td class="sci">Science Mr.Nye</td>
+			<td class="math">Math Mr.Einstein</td>
+			<td class="math">Math Mr.Einstein</td>
+			<td class="the">Theatre Ms.Kahoot</td>
+			<td class="fre">French Ms.Baguette</td>
+			<td class="eng">English Ms.Macbeth</td>
+			<td class="sci">Science Mr.Nye</td>
+			<td class="sci">Science Mr.Nye</td>
+			<td class="sci">Science Mr.Nye</td>
 		</tr>
 		<tr>
-			<th>2:10-3:05</th>
-			<td>Religion Mr.Jesus</td>
-			<td>Math Mr.Einstein</td>
-			<td>English Ms.Macbeth</td>
-			<td>French Ms.Baguette</td>
-			<td>English Ms.Macbeth</td>
-			<td>History Mr.Columbus</td>
-			<td>Math Mr.Einstein</td>
-			<td>Theatre Ms.Kahoot</td>
-			<td>English Ms.Macbeth</td>
-			<td>English Ms.Macbeth</td>
+			<th>Period 6</th>
+			<td class="rel">Religion Mr.Jesus</td>
+			<td class="math">Math Mr.Einstein</td>
+			<td class="eng">English Ms.Macbeth</td>
+			<td class="fre">French Ms.Baguette</td>
+			<td class="eng">English Ms.Macbeth</td>
+			<td class="his">History Mr.Columbus</td>
+			<td class="math">Math Mr.Einstein</td>
+			<td class="the">Theatre Ms.Kahoot</td>
+			<td class="eng">English Ms.Macbeth</td>
+			<td class="eng">English Ms.Macbeth</td>
 			<td></td>
 		</tr>
+	</table>
+	<form id="Some stuff">
+		<input placeholder="Search for Class">
+		<input type="Submit">
+	</form>
 </html>
