--- a/Schedule.html
+++ b/Schedule.html
@@ -88,11 +88,11 @@
 			<td class="his">History Mr.Columbus</td>
 			<td class="adv">Advisors Mr.Souvlaki</td>
 			<td class="adv">Advisors Mr.Souvlaki</td>
-			<td class="adv">Advisors Mr.Souvlaki</td>
-		</tr>
 		<tr>
 			<th>Period 5</th>
 			<td class="cp">Comp Prog Mr.Lua</td>
+			<td class="adv">Advisors Mr.Souvlaki</td>
+		</tr>
 			<td class="his">History Mr.Columbus</td>
 			<td class="sci">Science Mr.Nye</td>
 			<td class="math">Math Mr.Einstein</td>
@@ -122,5 +122,6 @@
 	<form id="Some stuff">
 		<input placeholder="Search for Class">
 		<input type="Submit">
+		<!-- <button onclick="MyFunction()">Click Me</button> !-->
 	</form>
 </html>
