--- a/Schedule.html
+++ b/Schedule.html
@@ -5,7 +5,6 @@
 	<title>School Schedule</title>
 	<h1>School Schedule</h1>
 	<table border="9">
-		<!-- 8:20-9:20 9:25-10:25 10:40-11:40 11:40-12:30 12:30-1:00 1:05-2:05 2:10-3:05 !-->
 		<tr>
 			<th>Day and Period</th>
 			<th>Day 1</th>
@@ -64,17 +63,17 @@
 		</tr>
 		<tr>
 			<th>Lunch</th>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
-			<td class="lunch">Munch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
+			<td class="lun">Lunch</td>
 		</tr>
 		<tr>
 			<th>Period 4</th>
@@ -88,11 +87,11 @@
 			<td class="his">History Mr.Columbus</td>
 			<td class="adv">Advisors Mr.Souvlaki</td>
 			<td class="adv">Advisors Mr.Souvlaki</td>
+			<td class="adv">Advisors Mr.Souvlaki</td>
+		</tr>
 		<tr>
 			<th>Period 5</th>
 			<td class="cp">Comp Prog Mr.Lua</td>
-			<td class="adv">Advisors Mr.Souvlaki</td>
-		</tr>
 			<td class="his">History Mr.Columbus</td>
 			<td class="sci">Science Mr.Nye</td>
 			<td class="math">Math Mr.Einstein</td>
@@ -119,9 +118,6 @@
 			<td></td>
 		</tr>
 	</table>
-	<form id="Some stuff">
-		<input placeholder="Search for Class">
-		<input type="Submit">
-		<!-- <button onclick="MyFunction()">Click Me</button> !-->
-	</form>
+		<input id="something" type="text" name="search" placeholder="Search for Class">
+		<input type="Submit" onclick="Class()" >
 </html>
